@@ -1,5 +1,11 @@
 2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
+	* openvassd/comm.c: Replaced use of includes.h
+	by respective direct includes. Replaced occurences of EXIT()
+	by exit().
+
+2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
 	* openvassd/parser.c: Removed TODO as it refers to
 	openvas-client which is not relevant anymore in this case.
 
